# simple-chatroom

./: .gitignore  CMakeLists.txt  README.md  spec.md
common/: GatewayPacket.cpp  GatewayPacket.h  exception.h  payload.cpp  payload.h
server/: server.cpp  server_worker.cpp  server_worker.h
